<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <include
        android:id="@+id/tool_bar_bill"
        layout="@layout/my_tool_bar"
        ></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageSwitcher
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/favorite_button" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSmall">

                <TextView
                    android:text="@string/committee_id"
                    android:layout_weight="0"
                    android:id="@+id/textView8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_header"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:text="@string/nothing"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/graytext"
                    android:id="@+id/com_id_data"
                    android:textSize="@dimen/detail_data"

                    android:layout_width="100dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSmall">
                <TextView
                    android:text="@string/name"
                    android:layout_weight="0"
                    android:id="@+id/tv_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_header"/>

                <TextView
                    android:text="@string/nothing"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/graytext"
                    android:id="@+id/com_name_data"
                    android:textSize="@dimen/detail_data"
                    android:layout_width="100dp" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSmall">
                <TextView
                    android:text="@string/chamber"
                    android:layout_weight="1"
                    android:id="@+id/tv_chamber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_header"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_weight="0"
                    android:layout_gravity="right"
                    android:textAlignment="gravity"
                    android:id="@+id/chamber_image"
                    android:paddingRight="0dp"
                    android:layout_marginRight="0dp"
                    />

                <TextView
                    android:text="@string/nothing"
                    android:layout_weight="0"
                    android:layout_gravity="right"
                    android:paddingLeft="0dp"
                    android:layout_marginLeft="0dp"
                    android:id="@+id/com_chamber_data"
                    android:textSize="@dimen/detail_data"
                    android:textColor="@color/graytext"
                    android:layout_width="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSmall">
                <TextView
                    android:text="@string/parent_com"
                    android:layout_weight="0"
                    android:id="@+id/tv_contact"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_header"/>

                <TextView
                    android:text="@string/nothing"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/graytext"
                    android:id="@+id/com_parent_data"
                    android:textSize="@dimen/detail_data" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSmall">
                <TextView
                    android:text="@string/contact"
                    android:layout_weight="0"
                    android:id="@+id/tv_startTerm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_header"/>

                <TextView
                    android:text="@string/nothing"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/graytext"
                    android:id="@+id/com_contact_data"
                    android:textSize="@dimen/detail_data" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingSmall">
                <TextView
                    android:text="@string/office"
                    android:layout_weight="0"
                    android:id="@+id/tv_endTerm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_header"/>

                <TextView
                    android:text="@string/nothing"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/graytext"
                    android:id="@+id/com_office_data"
                    android:textSize="@dimen/detail_data" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>