<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/my_tool_bar"
        ></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.88" />

                <ImageSwitcher
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:id="@+id/favorite_btn"
                    android:layout_marginTop="5dp"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/f"
                    android:id="@+id/facebook"
                    android:layout_gravity="right"
                    android:layout_weight="0.25"
                    android:paddingTop="@dimen/paddingSmall"/>



                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/t"
                    android:id="@+id/twitter"
                    android:layout_gravity="right"
                    android:layout_weight="0.25"
                    android:paddingTop="@dimen/paddingSmall"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/w"
                    android:id="@+id/website"
                    android:layout_gravity="right"
                    android:layout_weight="0.25"
                    android:paddingTop="@dimen/paddingSmall"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:paddingTop="@dimen/paddingMiddle"
                android:src="@drawable/ic_menu_camera"
                android:id="@+id/legis_photo" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.44" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_menu_manage"
                    android:id="@+id/party_icon"
                    android:layout_weight="0.20"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:text="@string/nothing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/party_name"
                    android:textSize="@dimen/detail_data"
                    android:layout_weight="0.64"
                    android:layout_gravity="center_horizontal"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">

                    <TextView
                        android:text="@string/name"
                        android:layout_weight="0"
                        android:id="@+id/textView8"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:textColor="@color/graytext"
                        android:gravity="right"
                        android:id="@+id/tv_name_data"
                        android:textSize="@dimen/detail_data"
                        android:layout_width="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/email"
                        android:layout_weight="0"
                        android:layout_width="wrap_content"
                        android:id="@+id/tv_email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"
                        android:layout_height="match_parent" />

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_email_data"
                        android:textSize="@dimen/detail_data"
                        android:layout_width="100dp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/chamber"
                        android:layout_weight="0"
                        android:layout_width="wrap_content"
                        android:id="@+id/tv_chamber"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"
                        android:layout_height="match_parent" />

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_chamber_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/contact"
                        android:layout_weight="0"
                        android:id="@+id/tv_contact"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_contact_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/start_term"
                        android:layout_weight="0"
                        android:id="@+id/tv_startTerm"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_startTerm_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/end_term"
                        android:layout_weight="0"
                        android:id="@+id/tv_endTerm"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_endTerm_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/term"

                        android:id="@+id/tv_termProgress"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>
                    <RelativeLayout
                        android:gravity="right"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools">
                        <ProgressBar
                            android:gravity="right"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/termProgress"

                            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
                            android:progressDrawable="@android:drawable/progress_horizontal"
                            />
                        <TextView
                            android:background="#00000000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="dsa"
                            android:layout_alignLeft="@+id/termProgress"
                            android:layout_alignTop="@+id/termProgress"
                            android:layout_alignRight="@+id/termProgress"
                            android:layout_alignBottom="@+id/termProgress"

                            android:id="@+id/progresstxt"
                            android:gravity="center_vertical|center_horizontal" />
                    </RelativeLayout>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/office"
                        android:layout_weight="0"
                        android:id="@+id/tv_office"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_office_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/state"
                        android:layout_weight="0"
                        android:id="@+id/tv_state"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_state_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/fax"
                        android:layout_weight="0"
                        android:id="@+id/tv_fax"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_fax_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/paddingSmall"
                    android:paddingBottom="@dimen/paddingSmall">
                    <TextView
                        android:text="@string/birthday"
                        android:layout_weight="0"
                        android:id="@+id/tv_birthday"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/detail_header"/>

                    <TextView
                        android:text="@string/nothing"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/graytext"
                        android:id="@+id/tv_birthday_data"
                        android:textSize="@dimen/detail_data" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>